--- a/web/index.html
+++ b/web/index.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://coinector.app/">
     <meta property="og:title" content="CoinMap - Coinector">
     <meta property="og:description" content="#Coinecting to coimunity...">
-    <meta property="og:image" content="/coinector1024x500.png">
+    <meta property="og:image" content="coinector.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://coinector.app/">
     <meta property="twitter:title" content="CoinMap - Coinector">
     <meta property="twitter:description" content="#Coinecting to coimunity...">
-    <meta property="twitter:image" content="https://coinector.app/coinector1024x500.png">
+    <meta property="twitter:image" content="coinector.png">
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
