coinector.web.app

--- a/web/share.html
+++ b/web/share.html
@@ -14,14 +14,14 @@
     <meta property="og:url" content="https://bmap.app/">
     <meta property="og:title" content="BMAP.APP - Coinector">
     <meta property="og:description" content="#Coinecting to coimunity...">
-    <meta property="og:image" content="https://coinector.app/coinector1024x500.png">
+    <meta property="og:image" content="https://coinector.web.app/coinector1024x500.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://bmap.app/">
     <meta property="twitter:title" content="BMAP.APP - Coinector">
     <meta property="twitter:description" content="#Coinecting to coimunity...">
-    <meta property="twitter:image" content="https://coinector.app/coinector1024x500.png">
+    <meta property="twitter:image" content="https://coinector.web.app/coinector1024x500.png">
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
