--- a/web/index.html
+++ b/web/index.html
@@ -55,8 +55,6 @@
     html, body {
         background-color:#303030;
     }
-
-
     </style>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVDl8Ng3iT4xfX2r6Fj1SvJJvndz73JOI"></script>
 </head>
@@ -77,11 +75,11 @@
     <script
             src="main.dart.js?version=254023" type="application/javascript"></script>
 </div>
-<div style="font-size:32px; color:white; margin-left:20px;margin-top:30px;">Welcome to <a target="_blank" style="color:white;" href="https://coinector.web.app">COINECTOR.WEB.APP</a></div>
+<!--div style="font-size:32px; color:white; margin-left:20px;margin-top:30px;">Welcome to <a target="_blank" style="color:white;" href="https://coinector.web.app">COINECTOR.WEB.APP</a></div>
 <div style="font-size:20px; color:white; margin-left:20px;margin-top:10px;">Also available on Android - Play Store</div>
 <div style="font-size:16px; color:white; margin-left:20px;margin-top:10px;">Loading the app into the browser cache...</div>
-<div style="font-size:24px; color:white; margin-left:20px;margin-top:10px;">BEST VIEWED IN CHROME/BRAVE</div>
-<span style="border:none;position:absolute;top:0px;margin-left:auto;margin-right:auto;z-index:-423432432432;"
+<div style="font-size:24px; color:white; margin-left:20px;margin-top:10px;">BEST VIEWED IN CHROME/BRAVE</div-->
+<span style="border:none;position:absolute;top:200px;left:380px;width:100px;z-index:-423432432432;"
       class="loading-bar1">
 </span>
 </body>
